<resources>
    <string name="app_name">Disastron</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Disastron</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="home">Home</string>
    <string name="mapopt">Map</string>
    <string name="share_to_facebook">Share to Facebook</string>
    <string name="emergency_contacts">Emergency Contacts</string>
    <string name="first_aid">First Aid</string>
    <string name="settings">Settings</string>
    <string name="facebook_app_id">159642972126354</string>
    <string name="fb_login_protocol_scheme">fb159642972126354</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="get_disaster_data">Get Disaster Data</string>

</resources>
